finish the login and sign view with vue

--- a/blog-app/index.html
+++ b/blog-app/index.html
@@ -2,11 +2,9 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Open Blog</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <meta charset="utf-8">
+  <title>blog-app</title>
 </head>
-
 <style>
   html {
     width: 100%;
@@ -21,7 +19,6 @@
     margin: 0;
     padding: 0;
     font-family: '微软雅黑';
-    margin: 0;
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -33,6 +30,5 @@
 <body>
   <div id="app"></div>
 </body>
-<script src="./build/bundle.js"></script>
 
 </html>
