--- a/public_src/login-view.html
+++ b/public_src/login-view.html
@@ -32,6 +32,8 @@
                 <input type="text" class="text-box" />
                 <p>Password</p>
                 <input type="password" class="text-box" />
+                <p>Confirm Password</p>
+                <input type="password" class="text-box" />
                 <input type="button" class="sign-up-button" value="Sign Up" />
             </div>
             <div id="text-container-right" class="text-container-right" style="display: block">
