--- a/blog-app/index.html
+++ b/blog-app/index.html
@@ -3,28 +3,14 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="format-detection"  content="telephone=no">
+  <meta name="format-detection" content="email=no"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>blog-app</title>
 </head>
 <style>
-  html {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
-  
-  body {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-    font-family: '微软雅黑';
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    -khtml-user-select: none;
-    user-select: none;
-  }
+
 </style>
 
 <body>
