--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="UTF-8">
-  <title>Open Blog</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-</head>
-
-<style>
-  html {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
-  
-  body {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-    font-family: '微软雅黑';
-    margin: 0;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    -khtml-user-select: none;
-    user-select: none;
-  }
-</style>
-
-<body>
-  <div id="app"></div>
-</body>
-<script src="./build/bundle.js"></script>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"><meta name=format-detection content="telephone=no"><meta name=format-detection content="email=no"><meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1"><title>blog-app</title><link href=/static/css/app.7e6b2d6e109daa6fe9739cf69ec3de1b.css rel=stylesheet></head><style></style><body><div id=app></div><script type=text/javascript src=/static/js/manifest.cf9d9f22b0a413c60781.js></script><script type=text/javascript src=/static/js/vendor.b2e55041e5d004263e69.js></script><script type=text/javascript src=/static/js/app.cc21cc5dc9d19cd59952.js></script></body></html>
