--- a/public_src/login-view.html
+++ b/public_src/login-view.html
@@ -2,6 +2,8 @@
 
 <head>
     <link rel="stylesheet" href="css/login-view.css" type="text/css">
+    <script src="../jquery-3.1.1.min.js"></script>
+    <script src="js/login.js"></script>
 </head>
 
 <body>
@@ -24,7 +26,7 @@
                 </p>
             </div>
         </div>
-        <div class="sign-up-container">
+        <div class="sign-up-container" id="sign-up-container">
             <div class="form-container-sign-up" id="form-container-sign-up">
                 <p>E-mail Address</p>
                 <input type="text" class="text-box" />
@@ -44,6 +46,5 @@
         </div>
 </body>
 
-<script src="js/login.js"></script>
 
 </html>
