--- a/public_src/main-view.html
+++ b/public_src/main-view.html
@@ -33,6 +33,9 @@
             </div>
         </div>
         <div class="information-box" id="information-box">
+            <div class="navigation-column-push-button" id="navigation-column-push-button">
+                <img src="image/ic_first_page_white_36dp_2x.png">
+            </div>
             <div class="navigation" id="navigation">
                 <div>
                     <p>Setting</p>
@@ -53,9 +56,9 @@
                     <p>Sign In</p>
                 </div>
             </div>
-            <div class="information-box-container" id="information-box-container">
+            <div id="information-box-container">
                 <div class="user-head-picture-box">
-                    <img src="image/head-picture.jpg">
+                    <img src="image/head-picture.jpg" id="head-picture">
                 </div>
                 <div class="user-introduction">
                     <h1>Fucking Man</h1>
