finish publish-view

--- a/public_src/main-view.html
+++ b/public_src/main-view.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="css/main-view.css" type="text/css">
+    <link rel="stylesheet" href="css/navigation-view.css" type="text/css">
     <script src="../jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
