finish personal-setting-view

--- a/public_src/publish-view.html
+++ b/public_src/publish-view.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <div id="container-shelter" class="shelter-box container-shelter">
+        <div id="container-shelter" class="container-shelter">
         </div>
     </div>
     <!--背景遮盖-->
