--- a/public_src/personal-setting-view.html
+++ b/public_src/personal-setting-view.html
@@ -10,21 +10,37 @@
 <body>
     <div class="body-container" id="body-container">
         <div class="text-view-container">
-            <div>
-                <div>
-                    <p>Nick Name:</p>
-                    <input type="text" class="text-box" />
+            <div class="head-picure-introduction-view">
+                <div class="head-picture-box">
+                    <img src="image/head-picture.jpg" />
                 </div>
                 <div>
-                    <p>Nick Name:</p>
+                    <textarea class="textarea"></textarea>
+                </div>
+            </div>
+            <div class="information-setting-view">
+                <div class="a-line-display">
+                    <div>
+                        <p>Nick Name:</p>
+                    </div>
                     <input type="text" class="text-box" />
                 </div>
-                <div>
-                    <p>Nick Name:</p>
+                <div class="a-line-display">
+                    <div>
+                        <p>Phone Number:</p>
+                    </div>
+                    <input type="text" class="text-box" />
+                </div>
+                <div class="a-line-display">
+                    <div>
+                        <p>Job Occupation:</p>
+                    </div>
                     <input type="text" class="text-box" />
                 </div>
             </div>
         </div>
+    </div>
+    <div id="container-shelter" class="container-shelter">
     </div>
 </body>
 <div class="navigation-column" id="navigation-column">
