--- a/public_src/main-view.html
+++ b/public_src/main-view.html
@@ -59,10 +59,10 @@
             </div>
             <div id="information-box-container">
                 <div class="user-head-picture-box">
-                    <img src="image/head-picture.jpg" id="head-picture">
+                    <!--<img src="image/head-picture.jpg" id="head-picture">-->
                 </div>
                 <div class="user-introduction">
-                    <h1>Fucking Man</h1>
+                    <h1>Crazy Man</h1>
                     <p id="information-text">
                         My son, when he was 4 years old began to show great interest in the English word ‘audlt video’ after he had watched the public-interest advertisement of on CCTV1.
                     </p>
