--- a/public_src/personal-setting-view.html
+++ b/public_src/personal-setting-view.html
@@ -12,10 +12,10 @@
         <div class="text-view-container">
             <div class="head-picure-introduction-view">
                 <div class="head-picture-box">
-                    <img src="image/head-picture.jpg" />
+                    <!--<img src="image/head-picture.jpg" />-->
                 </div>
                 <div>
-                    <textarea class="textarea"></textarea>
+                    <textarea class="textarea" placeholder="Introduce yourself here..."></textarea>
                 </div>
             </div>
             <div class="information-setting-view">
